@@ -26,7 +26,9 @@ To Do:
 - user defined bar lengths for intraday charts
 - fix: preferences font changes does not propagate to chart objects
 - add remember last file used for CSV plugin.
-
+- add a loop counter function to the COUNTER plugin
+- add multiple positions to the backtester
+ 
     
 
 Maybe some day:
