@@ -1,3 +1,4 @@
+
 /***************************************************************************
                           qtstalker.cpp  -  description
                              -------------------
